# fsdtorch

./: .gitignore  README.md  pyproject.toml
examples/: example_usage.py  live_cam.py
fsdtorch/: __init__.py  inference.py
